--- a/flashcard_app/pubspec.yaml
+++ b/flashcard_app/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   sqflite: ^2.2.2
   path_provider: ^2.0.11
   path: ^1.8.2
+  flip_card: ^0.7.0
+  flutter_flip_card: ^0.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
